[workspace]
members = [
    "node",
    "node/cli",
    "node/service",
    #"pallets/template",
    "runtime/common",
    "runtime/development",
    "primitives/common",
    "runtime/common", 
    "chain_extensions/rand",
]
[workspace.package]
authors = ["tranthiainhi303@gmail.com"]
homepage = "https://substrate.io/"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"


[workspace.dependencies]
# General deps
# (wasm)
codec = {package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
static_assertions = "1.1.0"

# third-party dependencies
clap = { version = "4.2.5", features = ["derive"]}
jsonrpsee = { version = "0.22", features = ["server"] }
futures = "0.3.21"
rand = "0.8"
# pallet-asset-conversion: turn on "num-traits" feature
primitive-types = { version = "0.12.0", default-features = false, features = ["codec", "scale-info", "num-traits"] }
# (native)
array-bytes = "6.0.0"

serde = { version = "1.0.197", default-features = false }
serde-big-array = { version = "0.3.2" }
serde_derive = { version = "1.0.117" }
serde_json = { version = "1.0.114", default-features = false }
serde_yaml = { version = "0.9" }

# Substrate
# (wasm)
sp-keyring = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}

sc-cli = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-network-common = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-network = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-executor = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-service = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-telemetry = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-rpc = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-transaction-pool = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-transaction-pool-api = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-consensus-aura = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-consensus-babe = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-consensus-babe-rpc = {default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-consensus = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
grandpa = { default-features = false, package = "sc-consensus-grandpa",  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-consensus-grandpa-rpc = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-client-api = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-rpc-api = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-rpc-spec-v2 = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-basic-authorship = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-network-sync = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-authority-discovery = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-chain-spec = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-sync-state-rpc = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sc-consensus-slots = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
grandpa-primitives = {default-features = false, package = "sp-consensus-grandpa",  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-consensus = {default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
#sp-consensus-beefy = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-timestamp = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}

# These dependencies are used for the node template's RPCs
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-api = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-authority-discovery = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-block-builder = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-blockchain = {  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-consensus-babe = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-consensus-grandpa = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-inherents = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-offchain = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-session = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-transaction-storage-proof = {  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-transaction-pool = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-staking = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-version = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
substrate-frame-rpc-system = {  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
substrate-state-trie-migration-rpc = {  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
mmr-rpc = {  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
sp-genesis-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}

# frame dependencies
frame-executive = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
frame-support = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
frame-system = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
frame-election-provider-support = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
frame-system-rpc-runtime-api = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
# Used for runtime benchmarking
frame-benchmarking = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
frame-system-benchmarking = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
frame-try-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
frame-benchmarking-cli = {  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
# CLI-specific dependencies

# Substrate pallets
# (wasm)
pallet-assets = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-aura = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-authority-discovery = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-authorship = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-alliance = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-asset-rate = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
#pallet-asset-conversion = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-babe = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-balances = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-bags-list = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-bounties = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-child-bounties = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-collective = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-contracts = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-conviction-voting = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-core-fellowship = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-election-provider-multi-phase = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-elections-phragmen = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-democracy = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-fast-unstake = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-glutton = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-grandpa = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-identity = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-im-online = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-indices = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-insecure-randomness-collective-flip = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-lottery = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-membership = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-message-queue = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-multisig = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-mmr = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-nfts = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-nomination-pools = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-nomination-pools-runtime-api = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
#pallet-nft-fractionalization = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-nis = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-ranked-collective = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-recovery = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-referenda = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-remark = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-root-testing = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-offences = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-preimage = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-proxy = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-session = {  default-features = false, features = ["historical"], git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-salary = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-society = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-staking-reward-curve = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-staking = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-state-trie-migration = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-scheduler = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-sudo = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-tips= {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-timestamp = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-transaction-payment = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-transaction-storage = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-transaction-payment-rpc = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-transaction-payment-rpc-runtime-api = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-asset-tx-payment = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-treasury = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-utility = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-uniques = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-whitelist = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
pallet-vesting = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}

# Node
service = {  package = "nativex-service", path = "./node/service" }

# Local Dependencies
pallet-template = {  default-features = false, path = "./pallets/template" }

# Chain extension
nativex-rand-extension = {  default-features = false, path = "./chain_extensions/rand" }

# Local Runtime
runtime-common = { path = "./runtime/common", default-features = false }
development-runtime = { path = "./runtime/development", default-features = false }
common-primitives = {path = "./primitives/common", default-features = false}

# Build deps
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"}
substrate-build-script-utils = {  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0"} 

[profile.release]
panic = "unwind"
